force-app/main/default/objects/Dog__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>What stage of life is the dog?</description>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baby</fullName>
            </value>
            <value>
                <fullName>Young</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>