force-app/main/default/objects/Dog__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <description>What kind of dog is it?</description>
    <label>Breed</label>
    <length>80</length>
    <type>Text</type>
</CustomField>