force-app/main/default/objects/Dog__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>URL of dog image</description>
    <label>Image URL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>