force-app/main/default/objects/Dog__c/fields/Shelter__c.field-meta.xml
<CustomField>
    <fullName>Shelter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shelter information</description>
    <label>Shelter</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dogs</relationshipLabel>
    <relationshipName>Dogs</relationshipName>
    <type>Lookup</type>
</CustomField>